--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,35 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
   font-family: "Livvic", "Times New Roman", sans-serif;
   font-size: 16px;
-  line-height: 24px;
-  color: #000000;
-  background-color: #FFFFFF;
-  margin: 0;
-  padding: 0;
+  line-height: 1.5;
+  font-style: normal;
+  font-weight: normal;
+  color: #eeeeee;
+}
+
+.page-body {
+  background-image: url('../img/movie-bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.page-body::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  content: '';
 }
 
 .container {
@@ -36,4 +57,78 @@ body {
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.site-header {
+  position: relative;
+  z-index: 1;
+  padding: 20px 0;
+}
+
+.site-main {
+  position: relative;
+  z-index: 1;
+  flex-grow: 1;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.site__logo-link {
+  display: block;
+}
+
+.site__logo-img {
+  display: block;
+  width: 75px;
+  height: 67px;
+}
+
+.site-header__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.site-header__button {
+  border: 2px dotted crimson;
+  padding: 2px 12px;
+  border-radius: 15px;
+  background-color: transparent;
+  color: #eeeeee;
+  transition: 0.3s background-color ease-in-out;
+}
+
+.site-header__button:nth-child(2) {
+  margin: 0 15px;
+  background-color: crimson;
+}
+
+.site-header__button:nth-child(2):hover {
+  background-color: transparent;
+}
+
+.site-header__button:not(:nth-child(2)):hover {
+  background-color: crimson;
+}
+
+.bookmark-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bookmark-btn::before {
+  content: '';
+  display: block;
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+  background-image: url('../img/bookmark.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
