--- a/css/styles.css
+++ b/css/styles.css
@@ -221,5 +221,116 @@ body {
   color: #eee;
   border: 1px dashed #eee;
   background-color: transparent;
-  cursor: pointer
+  cursor: pointer;
 }
+
+.movies-list {
+  padding: 0 28px;
+  margin: 0;
+  width: calc(100% - 60px);
+  list-style-type: none;
+}
+
+.movies-item {
+  position: relative;
+  width: 250px;
+  height: 180px;
+}
+
+.movie-link {
+  display: block;
+}
+
+.movie-thumbnail {
+  display: block;
+  width: 250px;
+  height: 180px;
+  object-fit: cover;
+}
+
+.movie-info {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px;
+  font-size: 14px;
+  color: #eee;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+}
+
+.movie-title {
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.info-wrapper {
+  display: flex;
+  width: 100%;
+  padding: 0 30px;
+  justify-content: space-around;
+}
+
+.movie-year {
+  display: block;
+  background-color: teal;
+  padding: 1px 5px;
+  border-radius: 9px;
+  margin-right: 30px;
+}
+
+.movie-rating {
+  display: block;
+}
+
+.movies-item:hover .movie-info {
+  opacity: 1;
+}
+
+.movie-secondary-link {
+  padding: 2px 5px;
+  border: none;
+  font-size: 12px;
+  line-height: 1;
+}
+
+.movie-secondary-link:hover {
+  text-decoration: none;
+  transform: rotate(10deg);
+}
+
+.movie-secondary-link:focus{
+  outline-width: 1px;
+  outline-color: #eee;
+  outline-style: dotted;
+} 
+
+.movie-secondary-link:active {
+  opacity: 0.8;
+}
+
+
+
+.movie-secondary {
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+
+.trailer-link {
+  margin: 0 5px;
+}
+
+.add-bookmark-btn {
+  cursor: pointer;
+}
+
+
