--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,9 @@ body {
 
 .lists-wrapper {
   display: flex;
+  height: calc(100vh - 107px);
   padding: 30px 0;
+  overflow: auto;
 }
 
 .sort-list {
@@ -229,12 +231,18 @@ body {
   margin: 0;
   width: calc(100% - 60px);
   list-style-type: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .movies-item {
   position: relative;
   width: 250px;
   height: 180px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 65px;
 }
 
 .movie-link {
@@ -257,14 +265,12 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-end;
   padding: 5px 10px;
   font-size: 14px;
   color: #eee;
-  background-color: rgba(0, 0, 0, 0.7);
-  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
 }
 
 .movie-title {
@@ -272,27 +278,35 @@ body {
   margin-bottom: 8px;
 }
 
-.info-wrapper {
-  display: flex;
-  width: 100%;
-  padding: 0 30px;
-  justify-content: space-around;
-}
-
 .movie-year {
   display: block;
+  max-width: 50px;
+  text-align: center;
   background-color: teal;
-  padding: 1px 5px;
+  padding: 1px 3px;
   border-radius: 9px;
-  margin-right: 30px;
+  margin-bottom: 7px;
 }
 
 .movie-rating {
+  display: flex;
+  align-items: center;
+}
+
+.movie-rating::before {
+  content: '';
   display: block;
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+  background-image: url('../img/rating.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 .movies-item:hover .movie-info {
-  opacity: 1;
+  opacity: 0;
 }
 
 .movie-secondary-link {
@@ -316,8 +330,6 @@ body {
 .movie-secondary-link:active {
   opacity: 0.8;
 }
-
-
 
 .movie-secondary {
   display: flex;
