--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,8 @@ body {
 }
 
 .sort-list {
+  position: fixed;
+  top: 20%;
   padding: 20px 0;
   display: flex;
   flex-direction: column;
@@ -216,15 +218,21 @@ body {
 }
 
 .sort-item {
-  margin-bottom: 12px;
+  width: calc(100% - 10px);
   color: #eee;
   border: 1px dashed #eee;
   background-color: transparent;
   cursor: pointer;
+  font-size: 12px;
+}
+
+.sort-item:not(:last-child) {
+  margin-bottom: 12px;
 }
 
 .movies-list-wrapper {
   width: calc(100% - 60px);
+  margin-left: 60px;
 }
 
 .movies-list {
@@ -459,4 +467,18 @@ body {
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.sort-item:hover {
+  background-color: #ffc107;
+  color: midnightblue;
+  border-color: midnightblue;
+}
+
+.sort-item:active {
+  opacity: 0.6;
+}
+
+.sort-item:focus {
+  outline: 0;
 }
