--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .site__logo-link {
@@ -231,8 +232,10 @@ body {
 }
 
 .movies-list-wrapper {
+  height: calc(100vh - 107px);
   width: calc(100% - 60px);
   margin-left: 60px;
+  overflow: auto;
 }
 
 .movies-list {
@@ -524,4 +527,82 @@ body {
 
 .site-header__button:active {
   opacity: 0.6;
+}
+
+mark {
+  display: inline-block;
+  /* background-color: transparent;
+  color: dodgerblue;
+  text-decoration: underline; */
+}
+
+@media only screen and (max-width: 1005px) {
+  .movies-list-wrapper {
+    height: calc(100vh - 134px);
+  }
+
+  .site-header__buttons {
+    margin-left: auto;
+  }
+}
+
+@media only screen and (max-width: 990px) {
+  .search-form {
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 715px) {
+  .movies-item {
+    width: 450px;
+    height: 220px;
+    margin-bottom: 65px;
+  }
+
+  .movie-thumbnail {
+    width: 450px;
+    height: 220px; 
+  }
+
+  .site__logo-link {
+    display: none;
+  }
+
+  .header-container {
+    justify-content: center;
+  }
+
+  .search-form {
+    max-width: 450px;
+    margin-right: 15px;
+    margin-bottom: 20px;
+  }
+
+  .site-header__buttons {
+    margin-right: auto;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .movies-item {
+    width: 380px;
+    height: 220px;
+  }
+
+  .movie-thumbnail {
+    width: 380px;
+    height: 220px; 
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .movies-item {
+    width: 280px;
+    height: 180px;
+  }
+
+  .movie-thumbnail {
+    width: 280px;
+    height: 180px; 
+  }
 }
